pricing/pricing.css
body{
	margin:0;
	padding:0;
	font-family: "Circular Std Medium", sans-serif;
}


section{
	width:  100%;
	height:100vh;
	box-sizing: border-box;
	padding: 140px 0;
	background:linear-gradient(to top, #3AAFA9 0%, #2b7a72 100%);
	line-height:1;
}  

.container {
    margin-left: 280px;
    margin-right: auto;
    padding-left: auto;
    padding-right: auto;	
}

.row {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-gap: 80px;
	text-align:center;
}

.payment{
	margin-left:1040px;
	font-size:50px;
	color:#2b7a78;
}





.card{
	position: relative;
	max-width: 300px;
	height: auto;
	margin: 0 auto;
	padding: 40px 20px;
	box-shadow: 0 10px 20px rgba(0,0,0,.4);
	transition: .5s;
	overflow:hidden;
}


.card:hover{
	transform:scale(1.1);
}


.plan .card{
	border-radius: 25px;
	width: 260px;
}


.plan:nth-child(1) .card,
.plan:nth-child(1) .card .title .fas{
	background: linear-gradient(-45deg, #24ff72, #9a4eff );
}


.plan:nth-child(2) .card,
.plan:nth-child(2) .card .title .fas{
	background: linear-gradient(-45deg, #f403d1, #64b5f6);
}


.plan:nth-child(3) .card,
.plan:nth-child(3) .card .title .fas{
	background: linear-gradient(-45deg, #ffec61, #f321d7);
}


.card:before{
	content:"";
	position: absolute;
	bottom:0;
	left:0;
	width:100%;
	height:40%;
	background:rgba(255,255,255, .1);
	z-index: 1;
}


.title .fas , .far{
	color:#ffffff;
	font-size:60px;
	width: 100px;
	height:100px;
	border-radius:50%;
	text-align: center;
	line-height: 100px;
	box-shadow:0 10px 10px rgba(0,0,0,.1)
}


.title h2{
	position:relative;
	margin: 20px 0 0;
	padding: 0;
	color: #fff;
	font-size: 28px;
	z-index:2;
}


.price{
	position:relative;
	z-index:2;
}


.price h4{
	margin:0;
	padding: 20px 0;
	color: #fff;
	font-size:60px;
}


.option{
	position:relative;
	z-index: 2;
}


.option ul{
	margin:0;
	padding:0;
}


.option ul li{
	margin:0 0 10px;
	padding:0;
	list-style:none;
	font-size: 19px;
	color: white; 
}


.card a{
	position:relative;
	z-index:2;
	background:#fff;
	color:#262626;
	width:150px;
	height:40px;
	line-height:40px;
	border-radius:40px;
	display:block;
	text-align:center;
	margin:20px auto 0;
	font-size: 16px;
	cursor: pointer;
	box-shadow: 0 10px 15px rgba(0,0,0, .2);
}


.card a{
	text-decoration:none
}

